--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 Hola a todos 
+<script>
+    var nombre = promt("Introduzca su nombre");
+    document.write(nombre);
+</script>
 </body>
 </html>
