--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 Hola a todos 
 <script>
-    var nombre = promt("Introduzca su nombre");
+    var nombre = prompt("Introduzca su nombre");
     document.write(nombre);
 </script>
 </body>
