--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <title> JAVASCRIPT PRUEBA</title>
 </head>
 <body>
-Hola a todos 
+Hola 
 <script>
     var nombre = prompt("Introduzca su nombre");
     document.write(nombre);
 </script>
+¿Que tal estas?
 </body>
 </html>
