--- a/Scripts/Practica1.html
+++ b/Scripts/Practica1.html
@@ -8,6 +8,14 @@
     <h1>TIPOS DE DATOS</h1>
     <hr>
     <h2>SCRIPT INTERNO</h2>
+    <script>
+        var  name, lastname;
+        name= prompt('como te llamas?');
+        lastname = promp('Introduzca su apellido');
+        documet.write('bienvenido',name," ", lastname," ", 'Como estas?' );
+
+    
+    </script>
 
 </body>
 
