--- a/Scripts/Practica1.html
+++ b/Scripts/Practica1.html
@@ -12,7 +12,7 @@
         var  name, lastname;
         name= prompt('como te llamas?');
         lastname = promp('Introduzca su apellido');
-        documet.write('bienvenido',name," ", lastname," ", 'Como estas?' );
+        document.write('bienvenido',name," ", lastname," ", 'Como estas?' );
 
     
     </script>
