--- a/Scripts/Practica1.html
+++ b/Scripts/Practica1.html
@@ -11,7 +11,7 @@
     <script>
         var  name, lastname;
         name= prompt('como te llamas?');
-        lastname = promp('Introduzca su apellido');
+        lastname = prompt('Introduzca su apellido');
         document.write('bienvenido',name," ", lastname," ", 'Como estas?' );
 
     
