--- a/Scripts/practica2.html
+++ b/Scripts/practica2.html
@@ -5,16 +5,16 @@
 
     </head>
     <body>
-       <h1> PREGUNTAS BASICAS SOBRE </h1>
+       <h1> PREGUNTAS BASICAS SOBRE TI </h1>
         <hr>
        <script>
         var nombre, cumple , edad , hijos, mascotas;
-nombre=prompt('Como te llamas?');
-cumple=prompt('Cuando es tu cumple?');
-edad=prompt("Cual es tu edad?");
-hijos = prompt('Tienes hijos? (introducir cantidad de hijos en numeros)');
-mascotas=prompt('Tienes mascostas')
-document.write=('Hola, me llamo ', nombre,' cumplo el ', cumple," por lo tanto tengo ",edad," , tengo ",hijos,' hijos y tengo ',mascotas," mascotas")
+        nombre=prompt('Como te llamas?');
+        cumple=prompt('Cuando es tu cumple?');
+        edad=prompt("Cual es tu edad?");
+        hijos = prompt('Tienes hijos? (introducir cantidad de hijos en numeros)');
+        mascotas=prompt('Tienes mascostas')
+        document.write=('Hola, me llamo ', nombre,' cumplo el ', cumple," por lo tanto tengo ",edad," , tengo ",hijos,' hijos y tengo ',mascotas," mascotas")
 
        </script> 
     </body>
