--- a/Scripts/practica2.html
+++ b/Scripts/practica2.html
@@ -13,8 +13,8 @@
         cumple=prompt('Cuando es tu cumple?');
         edad=prompt("Cual es tu edad?");
         hijos = prompt('Tienes hijos? (introducir cantidad de hijos en numeros)');
-        mascotas=prompt('Tienes mascostas')
-        document.write=('Hola, me llamo ', nombre,' cumplo el ', cumple," por lo tanto tengo ",edad," , tengo ",hijos,' hijos y tengo ',mascotas," mascotas")
+        mascotas=prompt('Tienes mascotas')
+        document.write=('Hola, me llamo ', nombre,' cumplo el ', cumple,' por lo tanto tengo ",edad,', tengo ',hijos,' hijos 'y tengo ',mascotas,' mascotas');
 
        </script> 
     </body>
