--- a/js/index.html
+++ b/js/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-<script scr="script1.js"></script>
-    <title> External Script </title>
-</head>
+    <head>
+        <script src="script1.js"></script>
+        <title>External Script</title>
+    </head>
 </html>
