--- a/js/index.html
+++ b/js/index.html
@@ -6,5 +6,12 @@
     </head>
     <body>
         <script src="script2.js"></script>
+        <!--Embedded script-->
+        <h1>Embedded script example</h1>
+        <button onclick="alert('hello world!');">click me</button>
+        
+
     </body>
 </html>
+
+
