--- a/Nuevoprograma.html
+++ b/Nuevoprograma.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      
-    </head>
+    
     <body>
         <script>
-            var a=100
-        </script>
-    </body>
-    </html>   
+            var a=100;
+            try{
+                var suma = a + b 
+                domente.write(suma);
+            }catch(error){
+                document.write('el error es: ',error)
+            }
+            </script>
+            </body>
+            </html>
