--- a/Nuevoprograma.html
+++ b/Nuevoprograma.html
@@ -10,6 +10,9 @@
             }catch(error){
                 document.write('el error es: ',error)
             }
+            finally{
+                document.write('<br>Este bloque siempre se va a mostrar');
+            }
             </script>
             </body>
             </html>
