--- a/Nuevoprograma.html
+++ b/Nuevoprograma.html
@@ -5,7 +5,7 @@
         <script>
             var a=100;
             try{
-                var suma = a + b 
+                var suma = a + 3 ;
                 domente.write(suma);
             }catch(error){
                 document.write('el error es: ',error)
