--- a/Nuevoprograma.html
+++ b/Nuevoprograma.html
@@ -3,9 +3,10 @@
     
     <body>
         <script>
+            "use strict";
             var a=100;
             try{
-                var suma = a + 3 ;
+             suma = a + 3 ;
                 domente.write(suma);
             }catch(error){
                 document.write('el error es: ',error)
